@@ -1,3 +1,5 @@
+* Textboxes in the replace bar use as much width as they can.
+
 v0.14.0 (16-1-2013)
 * Removed compatibility with the substitution list in the 0.10 format.
 * Substitution groups now have names. This implies a new list format: 0.14.
